--- a/frontend-moneyxchange/src/app/login/login.component.html
+++ b/frontend-moneyxchange/src/app/login/login.component.html
@@ -1,25 +1,21 @@
-<div class="col-sm-6 col-sm-6 col-sm-offset-3">
-	<h3>Login Form</h3>
-	<form class="form-horizontal" #loginForm="ngForm">
-		<div class="form-group">
-			<label for="username" class="col-sm-2 control-label">User
-				Name</label>
-			<div class="col-sm-10">
-				<input type="text" class="form-control" name="username"
-					placeholder="User Name" [(ngModel)]="user.username" required>
-			</div>
+<div class="col-4 offset-4 mt-5 square">
+	<div class="text-center">
+		<img alt="logo" src="assets/logo.png">
+	</div>
+	<h2 class="text-center mt-5">Login</h2>
+	<form class="form-horizontal" #loginForm="ngForm" (ngSubmit)="login()">
+		<div class="form-group mt-3">
+			<input type="text" class="form-control" name="username"
+				placeholder="User Name" [(ngModel)]="user.username" required>
 		</div>
-		<div class="form-group">
-			<label for="password" class="col-sm-2 control-label">Password</label>
-			<div class="col-sm-10">
-				<input type="password" class="form-control" name="password"
-					placeholder="Password" [(ngModel)]="user.password" required>
-			</div>
+		<div class="form-group mt-3">
+			<input type="password" class="form-control" name="password"
+				placeholder="Password" [(ngModel)]="user.password" required>
 		</div>
-		<div class="form-group">
-			<div class="col-sm-offset-2 col-sm-10">
-				<button type="submit" class="btn btn-primary"
-					[disabled]="!loginForm.form.valid" (click)="login()">Login</button>
+		<div class="form-group mt-3">
+			<div class="text-center">
+				<button type="submit" class="btn btn-primary">Iniciar
+					Sesión</button>
 			</div>
 		</div>
 	</form>
